Fix crash loading AIXM-5-1-20100201.mdl according to analysis at comment #3:

umbrello/object_factory.cpp
- In function createUMLObject() case !n.isEmpty(), if doc->findUMLObject()
  returns non NULL and solicitNewName is false then:
  - If `type' is ot_UMLObject (wildcard) or `type' is equal to o->baseType()
    then return the existing object.
  - Else log a message about type mismatch and call createNewUMLObject() for
    the given `type'.

BUG:338536